# Apply-agent

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  SPEC.md  pyproject.toml
docs/: AGENT_ASSIGNMENTS.md  APOLLO_RESUME_WORKFLOW_SPEC.md  NEXT_SESSION.md
docs/problems/: apollo-contact-scope.md  apollo-mcp-client.md  cli-status.md  data-source-ingestion.md  github-list-sources.md  gmail-draft-adapter.md  latex-resume-workflow.md  linkedin-source-scope.md  outreach-workflow.md
src/internship_agent/: __init__.py  apollo.py  apollo_mcp.py  approval.py  cli.py  contacts.py  github_sources.py  gmail.py  linkedin.py  models.py  outreach.py  parsing.py  resume_latex.py  scoring.py  sources.py  status.py  tracking.py  workflows.py
tests/: test_apollo.py  test_apollo_mcp.py  test_approval.py  test_cli.py  test_contacts.py  test_github_sources.py  test_gmail.py  test_linkedin.py  test_outreach.py  test_parsing.py  test_resume_latex.py  test_scoring.py  test_sources.py  test_status.py  test_tracking.py  test_workflows.py
