[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "internship-application-agent"
version = "0.1.0"
description = "Local human-in-the-loop assistant for internship recruiting workflows."
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "pandas>=2.2",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
internship-agent = "internship_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
